Bug 344355 - Commit a5d223221e802b057833e780cdca7cca65c06b52 broke thumbnails generation
Summary: Commit a5d223221e802b057833e780cdca7cca65c06b52 broke thumbnails generation
Status: RESOLVED FIXED
Alias: None
Product: kio-extras
Classification: Frameworks and Libraries
Component: default (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Development Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-19 16:47 UTC by Eugene Shalygin
Modified: 2015-03-02 08:39 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eugene Shalygin 2015-02-19 16:47:46 UTC
After the given commit generation of new thumbnails does not happen. PreviewJobPrivate::createThumbnail tries to execute thumbnail generation job, but it returns no data. Is it supposed to work with the current generators? The linked review request  does not say anything about this.

Reproducible: Always

Steps to Reproduce:
Use dolphin or previewtest test app from kio 

Actual Results:  
No thumbnails for new files in Dolphin or "Failed" message in previewtest app


Reverting this commit brings back thumbnails generation
Comment 1 Lukáš Tinkl 2015-02-19 16:53:55 UTC
Confirmed, noticed the same recently
Comment 2 Luca Beltrame 2015-02-23 22:57:59 UTC
Adding David Faure to CC, since he's the most knowledgeable on KIO. Basically all PreviewJobs will not work. David, where should one look for clues?
Comment 3 Christoph Feck 2015-02-27 17:27:05 UTC
Adding the other David.
Comment 4 Lukáš Tinkl 2015-03-02 08:39:18 UTC
Git commit d50a54f861f80f78d85f8fdefb6959f6c44828d3 by Lukáš Tinkl.
Committed on 02/03/2015 at 08:38.
Pushed by lukas into branch 'master'.

unbreak thumbnail plguin loading

M  +2    -1    thumbnail/thumbnail.cpp

http://commits.kde.org/kio-extras/d50a54f861f80f78d85f8fdefb6959f6c44828d3