unbreak thumbnail plguin loading

BUG: 344355